Fixed: Edit button for import list exclusion on mobile
Fixes #9736

--- a/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
+++ b/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
@@ -10,7 +10,7 @@
 .movieTitle {
   @add-mixin truncate;
 
-  flex: 0 0 600px;
+  flex: 0 1 600px;
 }
 
 .tmdbId,
