--- a/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusions.css
+++ b/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusions.css
@@ -5,7 +5,7 @@
 }
 
 .title {
-  flex: 0 0 600px;
+  flex: 0 1 600px;
 }
 
 .tmdbId,
